<resources>
    <string name="app_name">Surah For Namaz</string>
    <string name="dua_layout">প্রয়োজনীয় মাসনূন দু\'আ সমূহ</string>
    <string name="farz_intro">ফরয নামাজের পর গুরুত্বপূর্ণ আমল</string>
    <string name="amal_1_name">১ঃ আল্লাহু আকবর বলা</string>
    <string name="amal_1">সালাম ফেরানোর পরে কিছুটা সশব্দে ১ বার ‘আল্লাহু আকবার’ বলা। আব্দুল্লাহ ইবনে আব্বাস (রা.) থেকে বর্ণিত তিনি বলেন, ‘আমি তাকবির (আল্লাহু আকবার) দ্বারা রাসুলুল্লাহ (সা.)-এর নামাজের সমাপ্তি সম্পর্কে অবহিত হতাম।’ (বুখারি ও মুসলিম)</string>
    <string name="amal_2_name">২ঃ ইস্তেগফার পড়া</string>
    <string name="amal_2">প্রত্যেক ফরজ নামাজের পর ৩ বার ইস্তেগফার (আস্তাগফিরুল্লাহ) পাঠ করা। সাওবান (রা.) থেকে বর্ণিত, তিনি বলেন: ‘রাসুলুল্লাহ (সা.) যখন তার সালাত শেষ করতেন, তিনবার ইস্তেগফার করতেন।’ (মুসলিম: ১৩৬২)</string>
    <string name="amal_3_name">৩ঃ আল্লাহুম্মা, আনতাস-সালাম পড়া</string>
    <string name="amal_3">প্রত্যেক ফরজ নামাজের পর একবার বলা,\n اللَّهُمَّ أَنْتَ السَّلاَمُ وَمِنْكَ السَّلاَمُ، تَبَارَكْتَ يَا ذَا الْجَلاَلِ وَالإِكْرَامِ\n ‏ অর্থাৎ হে আল্লাহ, তুমিই শান্তিদাতা এবং তোমার পক্ষ থেকেই শান্তি আসে। তুমি বরকতময়, হে মহৎ ও সম্মানের অধিকারী।সাওবান (রা.) থেকে বর্ণিত, ‘রাসুলুল্লাহ (সা.) যখন তার সালাত শেষ করে তিনি এ দোয়াটি পড়তেন।’ (মুসলিম: ১৩৬২)</string>
    <string name="amal_4_name">৪ঃ একবার ‘আল্লা-হুম্মা আ‘ইন্নি...</string>
    <string name="amal_4">প্রত্যেক ফরজ নামাজের পর একবার বলা:\n اللَّهُـمَّ أَعِـنِّي عَلـَى ذِكْـرِكَ وَشُكْـرِكَ وَحُسْـنِ عِبَـادَتِـكَ \n অর্থাৎ হে আল্লাহ! তোমার জিকির করার, তোমার কৃতজ্ঞতা প্রকাশ করার এবং উত্তমরূপে তোমার ইবাদত করার ব্যাপারে আমাকে সাহায্য কর। (আবু দাউদ: ১৫২৪)</string>
    <string name="amal_5_name">৫ঃ একবার আয়াতুল কুরসি পড়া</string>
    <string name="amal_5">প্রত্যেক ফরজ নামাজের পর একবার আয়াতুল কুরসি পড়া। আবু উমামা (রা.) থেকে বর্ণিত, রাসুলুল্লাহ (সা.) বলেছেন, ‘যে ব্যক্তি প্রত্যেক ফরজ নামাজের পর আয়াতুল কুরসি পাঠ করবে, তার জন্য জান্নাতে প্রবেশের পথে একমাত্র মৃত্যু ছাড়া আর কোনো বাধা থাকবে না।’ (ইমাম নাসায়ির দিন-রাত্রির আমল: ১০০) অর্থাৎ মৃত্যুর সঙ্গে সঙ্গেই সে জান্নাতের আরাম-আয়েশ ভোগ করতে থাকবে।</string>
    <string name="amal_6_name">৬ঃ একবার লা ইলাহা ইল্লাল্লাহু...</string>
    <string name="amal_6">প্রত্যেক ফরজ নামাজের পরে একবার বলা: লা ইলাহা ইল্লাল্লাহু ওয়াহদাহু লা শারিকা লাহু, লাহুল মুলকু ওয়া লাহুল হামদু ওয়াহুয়া আলা কুল্লি শাইয়িন কাদির। অর্থাৎ— আল্লাহ ভিন্ন কোনো মাবুদ নেই। তিনি একক, তার কোনো অংশীদার নেই। রাজত্ব তারই এবং প্রশংসাও তারই প্রাপ্য, তিনি সবকিছুর ওপর ক্ষমতাবান।</string>
    <string name="amal_7_name">৭ঃ তিন তাসবীহর আমল করা</string>
    <string name="amal_7">প্রত্যেক ফরজ নামাজের পর তিন তাসবিহর আমল করা। রাসুল (সা.) বলেছেন, ‘যে ব্যক্তি প্রত্যেক ফরজ নামাজের পর ৩৩ বার সুবহানাল্লাহ, ৩৩ বার আলহামদুলিল্লাহ, ৩৩ বার আল্লাহু আকবার বলবে, তার গুনাহ সমুদ্রের ফেনা পরিমাণ হলেও ক্ষমা করে দেয়া হবে।’ (মুসলিম : ১৩৮০)</string>
    <string name="amal_8_name">৮ঃ আল্লাহর কাছে আশ্রয় প্রার্থনা করা</string>
    <string name="amal_8">প্রত্যেক ফরজ নামাজের পর রাসুল (সা.) আল্লাহর কাছে আশ্রয় প্রার্থনা করে বলতেন: আল্লাহুম্মা! ইন্নি আউযুবিকা, মিনাল যুবনি, ও আউযুবিকা মিন আন উরদ্দা ইলা আরযালিল উমুরি ওয়া আউযুবিকা মিন ফিতনাতিদ-দুনইয়া ওয়া আউযুবিকা মিন আযাবিল কবারি। অর্থাৎ— হে আল্লাহ! আমি ভীরুতা, অতি বার্ধক্য, দুনিয়ার ফেতনা ও কবরের আজাব থেকে আপনার নিকট পানাহ চাই। (বুখারি: ২৬৬৭)</string>
    <string name="amal_9_name">৯ঃ ১০০ বার তাসবীহ পড়া</string>
    <string name="amal_9">ফজরের নামাজের পর ১০০ বার সুবহানাল্লাহ ও ১০০ বার লা-ইলাহা ইল্লাল্লাহ বলা।রাসুল (সা.) বলেন, ‘যে ব্যক্তি ফজর নামাজের পরে ১০০ বার সুবহানাল্লাহ ও ১০০ বার লা-ইলাহা ইল্লাল্লাহ পড়বে তার পেছনের সব গোনাহ মাফ করে দেয়া হবে, যদিও তার গোনাহ সমুদ্রের ফেনা পরিমাণ হয়।’ (ইমাম নাসায়ির দিন-রাত্রির আমল: ১৪০)</string>
    <string name="amal_10_name">১০ঃ তিনবার এই দুয়া পড়া</string>
    <string name="amal_10">প্রত্যেক ফরজ নামাজের পর তিনবার পাঠ করা: আল্লাহুম্মা! ইন্নি আউযুবিকা মিনাল কুফরি ওয়াল ফাকরি ওয়া আউযুবিকা মিন আযাবিল কবরি, লা-ইলাহা ইল্লা আনতা। অর্থাৎ হে আল্লাহ! আমি তোমার আশ্রয় প্রার্থনা করছি, কুফরি ও দারিদ্র্য থেকে এবং আশ্রয় প্রার্থনা করছি, কবরের আজাব থেকে। তুমি ছাড়া ইবাদতের যোগ্য কোনো ইলাহ নেই। (নাসাঈ: ১৩৪৭)</string>
</resources>